// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled 1`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k l m n o p q r s t u v w"
    disabled={true}
    onClick={undefined}
    onKeyPress={[Function]}
    role="button"
    style={
        Object {
            "cursor": "pointer",
            "pointerEvents": "none",
            "userSelect": "none",
          }
    }
    tabIndex={-1}
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{border-bottom-left-radius:2}
    .e{border-bottom-right-radius:2}
    .f{border-top-left-radius:2}
    .g{border-top-right-radius:2}
    .h{margin-bottom:7.199999999999999}
    .i{margin-left:6}
    .j{margin-right:6}
    .k{margin-top:7.199999999999999}
    .l{padding-bottom:4.800000000000001}
    .m{padding-left:24}
    .n{padding-right:24}
    .o{padding-top:4.800000000000001}
    .p{opacity:0.5}
    .q{color:black}
    .r{white-space:pre-wrap}
    .s{overflow-wrap:break-word}
    .t{-ms-hyphens:auto}
    .u{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .v{font-size:16}
    .w{line-height:24px}",
}
`;

exports[`primary 1`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k l m n o p q r s t u v w x y z"
    disabled={undefined}
    onClick={undefined}
    onKeyPress={[Function]}
    role="button"
    style={
        Object {
            "cursor": "pointer",
            "pointerEvents": "auto",
            "userSelect": "none",
          }
    }
    tabIndex={0}
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{border-bottom-left-radius:2}
    .e{border-bottom-right-radius:2}
    .f{border-top-left-radius:2}
    .g{border-top-right-radius:2}
    .h{margin-bottom:7.199999999999999}
    .i{margin-left:6}
    .j{margin-right:6}
    .k{margin-top:7.199999999999999}
    .l{padding-bottom:4.800000000000001}
    .m{padding-left:24}
    .n{padding-right:24}
    .o{padding-top:4.800000000000001}
    .p{background-color:blue}
    .q{color:white}
    .r{white-space:pre-wrap}
    .s{overflow-wrap:break-word}
    .t{-ms-hyphens:auto}
    .u{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .v{font-size:16}
    .w{line-height:24px}
    .x{font-weight:600}
    .y{-moz-osx-font-smoothing:grayscale}
    .z{-webkit-font-smoothing:antialiased}",
}
`;

exports[`primary outline 1`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ad ae af"
    disabled={undefined}
    onClick={undefined}
    onKeyPress={[Function]}
    role="button"
    style={
        Object {
            "cursor": "pointer",
            "pointerEvents": "auto",
            "userSelect": "none",
          }
    }
    tabIndex={0}
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{border-bottom-left-radius:2}
    .e{border-bottom-right-radius:2}
    .f{border-top-left-radius:2}
    .g{border-top-right-radius:2}
    .h{margin-bottom:7.199999999999999}
    .i{margin-left:6}
    .j{margin-right:6}
    .k{margin-top:7.199999999999999}
    .l{padding-bottom:3.8000000000000007}
    .m{padding-left:23}
    .n{padding-right:23}
    .o{padding-top:3.8000000000000007}
    .p{border-bottom-color:blue}
    .q{border-left-color:blue}
    .r{border-right-color:blue}
    .s{border-top-color:blue}
    .t{border-style:solid}
    .u{border-bottom-width:1}
    .v{border-left-width:1}
    .w{border-right-width:1}
    .x{border-top-width:1}
    .y{color:blue}
    .z{white-space:pre-wrap}
    .ab{overflow-wrap:break-word}
    .ac{-ms-hyphens:auto}
    .ad{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .ae{font-size:16}
    .af{line-height:24px}",
}
`;

exports[`render 1`] = `
Object {
  "component": <div
    className="a b c d e f g h i j k l m n o p q r s t u v"
    disabled={undefined}
    onClick={undefined}
    onKeyPress={[Function]}
    role="button"
    style={
        Object {
            "cursor": "pointer",
            "pointerEvents": "auto",
            "userSelect": "none",
          }
    }
    tabIndex={0}
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{border-bottom-left-radius:2}
    .e{border-bottom-right-radius:2}
    .f{border-top-left-radius:2}
    .g{border-top-right-radius:2}
    .h{margin-bottom:7.199999999999999}
    .i{margin-left:6}
    .j{margin-right:6}
    .k{margin-top:7.199999999999999}
    .l{padding-bottom:4.800000000000001}
    .m{padding-left:24}
    .n{padding-right:24}
    .o{padding-top:4.800000000000001}
    .p{color:black}
    .q{white-space:pre-wrap}
    .r{overflow-wrap:break-word}
    .s{-ms-hyphens:auto}
    .t{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .u{font-size:16}
    .v{line-height:24px}",
}
`;
